feat: 코드 정리 및 불필요한 주석 제거, CORS 설정 개선